added some party settings and events